--- a/requirements.txt
+++ b/requirements.txt
@@ -13,4 +13,6 @@ tenacity==9.0.0
 python-dateutil==2.9.0.post0
 prometheus-client==0.20.0
 psycopg2-binary==2.9.9
+passlib[bcrypt]==1.7.4
+PyJWT==2.9.0
 
